--- a/MyApplication/app/src/main/res/layout/activity_familysetting.xml
+++ b/MyApplication/app/src/main/res/layout/activity_familysetting.xml
@@ -88,6 +88,12 @@
     <!--        android:text="imageUpload(opengallery)"-->
     <!--        />-->
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button" />
+
     <EditText
         android:id="@+id/editTextFamilyname"
         android:layout_width="300dp"
