--- a/MyApplication/app/src/main/res/layout/defaultcard_layout.xml
+++ b/MyApplication/app/src/main/res/layout/defaultcard_layout.xml
@@ -33,6 +33,22 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent">
 
+                    <ImageView
+                        android:id="@+id/item_image2"
+                        android:layout_width="140dp"
+                        android:layout_height="175dp"
+                        android:src="@drawable/grandparents"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <ImageView
+                        android:id="@+id/item_image4"
+                        android:layout_width="140dp"
+                        android:layout_height="175dp"
+                        android:src="@drawable/family"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="2dp"
@@ -42,14 +58,24 @@
                         tools:layout_editor_absoluteY="344dp" />
 
                     <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/grandparents"
                         android:id="@+id/item_image"
+                        android:layout_width="140dp"
+                        android:layout_height="175dp"
+                        android:src="@drawable/family"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/item_image2"
+                        app:layout_constraintVertical_bias="0.0" />
+
+                    <ImageView
+                        android:id="@+id/item_image3"
+                        android:layout_width="140dp"
+                        android:layout_height="175dp"
+                        android:src="@drawable/grandparents"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@+id/item_image2"
+                        app:layout_constraintVertical_bias="0.0" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
