--- a/MyApplication/app/src/main/res/layout/defaultcard_layout.xml
+++ b/MyApplication/app/src/main/res/layout/defaultcard_layout.xml
@@ -98,7 +98,7 @@
                         android:textSize="25dp"
                         android:textStyle="bold"
                         android:gravity="center"
-                        android:id="@+id/item_title"
+                        android:id="@+id/item_title_d"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
