--- a/MyApplication/app/src/main/res/layout/card_layout.xml
+++ b/MyApplication/app/src/main/res/layout/card_layout.xml
@@ -17,21 +17,26 @@
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
-        <FrameLayout android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:background="#61FFFFFF"
 
+        <FrameLayout
+            android:id="@+id/card_frameLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+
+                android:layout_height="wrap_content"
+                android:background="#61FFFFFF">
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/middle_section_constraint"
                     android:layout_width="0dp"
                     android:layout_height="350dp"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/bottom_section_constraint"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent">
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <View
                         android:layout_width="match_parent"
@@ -42,16 +47,15 @@
                         tools:layout_editor_absoluteY="344dp" />
 
                     <ImageView
+                        android:id="@+id/item_image"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/grandparents"
-                        android:id="@+id/item_image"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -65,14 +69,15 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/middle_section_constraint">
+
                     <TextView
+                        android:id="@+id/item_title_d"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:text="1대 가족"
                         android:textSize="25dp"
                         android:textStyle="bold"
-                        android:gravity="center"
-                        android:id="@+id/item_title_d"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
