family DB with FamilyMake

--- a/MyApplication/app/src/main/res/layout/activity_dynamic.xml
+++ b/MyApplication/app/src/main/res/layout/activity_dynamic.xml
@@ -122,5 +122,11 @@
         android:layout_gravity="center"
         android:src="@drawable/share"/>
 
+    <Button
+        android:id="@+id/JoinButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="참여하기" />
+
 
 </LinearLayout>
