--- a/MyApplication/app/src/main/res/layout/card_layout.xml
+++ b/MyApplication/app/src/main/res/layout/card_layout.xml
@@ -75,7 +75,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="1대 가족"
+                        android:text="MYPAGE"
                         android:textSize="25dp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
