--- a/MyApplication/app/src/main/res/layout/defaultcard_layout.xml
+++ b/MyApplication/app/src/main/res/layout/defaultcard_layout.xml
@@ -91,14 +91,15 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/middle_section_constraint">
+
                     <TextView
+                        android:id="@+id/item_title_d"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:text="1대 가족"
+                        android:gravity="center"
+                        android:text="MYPAGE"
                         android:textSize="25dp"
                         android:textStyle="bold"
-                        android:gravity="center"
-                        android:id="@+id/item_title_d"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
