Family Image&&name to DB

--- a/MyApplication/app/src/main/res/layout/activity_familysetting.xml
+++ b/MyApplication/app/src/main/res/layout/activity_familysetting.xml
@@ -90,11 +90,11 @@
     <!--        android:text="imageUpload(opengallery)"-->
     <!--        />-->
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Button" />
+<!--    <Button-->
+<!--        android:id="@+id/button"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Button" />-->
 
     <EditText
         android:id="@+id/editTextFamilyname"
