--- a/MyApplication/app/src/main/res/layout/activity_mainpage.xml
+++ b/MyApplication/app/src/main/res/layout/activity_mainpage.xml
@@ -339,7 +339,7 @@
                     android:id="@+id/Board_Plus_Button"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="게시판 글 추가" />
+                    android:text="게시판 글 작성하기" />
 
                 <ScrollView
                     android:layout_width="match_parent"
