--- a/MyApplication/app/src/main/res/layout/activity_mainpage.xml
+++ b/MyApplication/app/src/main/res/layout/activity_mainpage.xml
@@ -124,13 +124,15 @@
                     android:layout_height="match_parent"
                     android:id="@+id/LinearMainpage"
                     android:orientation="vertical">
+
                     <TextView
+                        android:id="@+id/MMMAinPage"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center"
                         android:text="메인 페이지"
                         android:textSize="30dp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
                 </LinearLayout>
                 <!--                -->
                 <LinearLayout
