--- a/MyApplication/app/src/main/res/layout/notice_card.xml
+++ b/MyApplication/app/src/main/res/layout/notice_card.xml
@@ -18,7 +18,7 @@
                 android:layout_margin="10dp"
                 android:orientation="horizontal">
 
-                <ImageView
+                <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/notice_profile"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
